[gd_scene load_steps=4 format=3 uid="uid://crfq6frmmtldd"]

[ext_resource type="Script" path="res://Tipos/TipoBala.gd" id="1_j7vwx"]
[ext_resource type="Texture2D" uid="uid://drt0amwaj556e" path="res://Assets/tiro.png" id="2_h5lir"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_maev4"]
size = Vector2(8, 8)

[node name="Bullet" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_j7vwx")
Velocidade = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_maev4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h5lir")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
