[gd_scene load_steps=2 format=3 uid="uid://ch5g7prg3kl8w"]

[ext_resource type="Script" path="res://Tipos/TipoBala.gd" id="1_crbvl"]

[node name="ParticulaComponente" type="Area2D"]
texture_filter = 1
script = ExtResource("1_crbvl")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.4, 0.4)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
